# fuzzer

./: .gitignore  CMakeLists.txt  README.md  generate_seeds.py  getTests.py
analysis/: All_Crashes.txt  id:000000,sig:06,src:000000,time:192,execs:47,op:havoc,rep:7.txt  id:000000,sig:06,src:000000,time:209,execs:95,op:havoc,rep:3.txt  id:000001,sig:06,src:000000,time:359,execs:142,op:havoc,rep:4.txt  id:000001,sig:06,src:000000,time:420,execs:549,op:havoc,rep:5.txt  id:000002,sig:06,src:000000,time:2949,execs:2503,op:havoc,rep:1.txt  id:000002,sig:06,src:000000,time:511,execs:208,op:havoc,rep:7.txt  id:000003,sig:06,src:000000,time:3119,execs:2632,op:havoc,rep:9.txt  id:000003,sig:06,src:000000,time:737,execs:412,op:havoc,rep:1.txt  id:000004,sig:06,src:000000,time:3517,execs:3291,op:havoc,rep:4.txt  id:000004,sig:06,src:000000,time:900,execs:487,op:havoc,rep:4.txt  id:000005,sig:06,src:000000,time:1236,execs:522,op:havoc,rep:6.txt  id:000005,sig:06,src:000000,time:3867,execs:3764,op:havoc,rep:6.txt  id:000006,sig:06,src:000000,time:1528,execs:577,op:havoc,rep:1.txt  id:000006,sig:06,src:000033,time:7654,execs:10754,op:havoc,rep:1.txt  id:000007,sig:06,src:000000,time:1829,execs:1100,op:havoc,rep:6.txt  id:000008,sig:06,src:000041,time:13046,execs:11491,op:havoc,rep:1.txt  id:000009,sig:06,src:000061,time:41879,execs:38840,op:havoc,rep:1.txt  id:000010,sig:06,src:000061,time:44100,execs:41368,op:havoc,rep:2.txt  id:000011,sig:11,src:000065+000017,time:65222,execs:63590,op:splice,rep:3.txt  id:000012,sig:06,src:000070,time:92057,execs:93656,op:havoc,rep:1.txt
(+8 files in other folders)
